--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/hooks": "^7.11.2",
     "@mantine/notifications": "^7.11.2",
     "@mantine/nprogress": "^7.11.2",
+    "@tabler/icons-react": "^3.11.0",
     "axios": "^1.7.2",
     "json-server": "^1.0.0-beta.1",
     "next": "14.2.5",
